docs/examples/valid/extension/switch/simpleSwitch.wacc
begin
  switch 6 {
  case 4:
    println "4"
  case 5:
    println "5"
  case (1+5):
    println "6"
  }
end
