docs/examples/invalid/syntaxErr/extension/switch/noFiSwitch.wacc
begin
  switch 4
		case 4
      skip
    default:
      skip
    fi
end
